[ansible] JFrog Platform 10.11.3 release

--- a/Ansible/ansible_collections/jfrog/platform/artifactory.yml
+++ b/Ansible/ansible_collections/jfrog/platform/artifactory.yml
@@ -1,4 +1,7 @@
-- hosts: artifactory_servers
+- name: Play for artifactory_servers
+  hosts: artifactory_servers
+  collections:
+    - community.general
   serial:
     - 1
     - 100%
