--- a/Ansible/ansible_collections/jfrog/platform/distribution.yml
+++ b/Ansible/ansible_collections/jfrog/platform/distribution.yml
@@ -1,3 +1,6 @@
-- hosts: distribution_servers
+- name: Play for distribution_servers
+  hosts: distribution_servers
+  collections:
+    - community.general
   roles:
     - distribution
