--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/meta/main.yml
@@ -21,7 +21,7 @@ galaxy_info:
       versions:
         - buster
     - name: Amazon
-      version:
+      versions:
         - 2
   galaxy_tags:
     - artifactory
