--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/RedHat.yml
@@ -1,8 +1,8 @@
 - name: Install prerequisite packages
-  become: yes
-  yum:
+  become: true
+  ansible.builtin.yum:
     name: ['net-tools', '{{ selinux_policy_package }}']
     state: present
 
 - name: Configure SELinux context
-  include_tasks: shared/selinux_configure_context.yml
+  ansible.builtin.include_tasks: shared/selinux_configure_context.yml
