--- a/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/RedHat.yml
@@ -1,5 +1,5 @@
 - name: Install prerequisite packages
-  become: yes
-  yum:
+  become: true
+  ansible.builtin.yum:
     name: ["expect", "acl"]
     state: present
