--- a/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/setup-searchguard.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/setup-searchguard.yml
@@ -1,6 +1,6 @@
 - name: Copy elasticsearch cert files
-  become: yes
-  copy:
+  become: true
+  ansible.builtin.copy:
     src: "files/searchguard/{{ item }}"
     dest: "{{ insight_es_conf_base }}/{{ item }}"
     owner: elasticsearch
@@ -12,18 +12,18 @@
     - "root-ca.pem"
 
 - name: Find searchguard bundle
-  become: yes
-  find:
+  become: true
+  ansible.builtin.find:
     paths: "{{ insight_home }}/app/third-party/elasticsearch/"
     patterns: "^search-guard-.+\\.zip$"
-    use_regex: yes
+    use_regex: true
     file_type: file
   register: check_searchguard_bundle_result
 
 - name: Install searchguard plugin
-  become: yes
-  ignore_errors: yes
-  shell: |
+  become: true
+  ignore_errors: true
+  ansible.builtin.shell: |
     {{ insight_es_script_path }}/elasticsearch-plugin install \
     -b file://{{ check_searchguard_bundle_result.files[0].path }}
   environment:
@@ -33,8 +33,8 @@
   when: check_searchguard_bundle_result.matched == 1
 
 - name: Copy searchguard certificate files
-  become: yes
-  copy:
+  become: true
+  ansible.builtin.copy:
     src: "files/searchguard/{{ item }}"
     dest: "{{ insight_es_searchgaurd_home }}/tools/{{ item }}"
     owner: elasticsearch
@@ -46,8 +46,8 @@
     - "root-ca.pem"
 
 - name: Copy SG roles files
-  become: yes
-  copy:
+  become: true
+  ansible.builtin.copy:
     src: "files/searchguard/{{ item }}"
     dest: "{{ insight_es_searchgaurd_home }}/sgconfig/{{ item }}"
     owner: elasticsearch
@@ -59,8 +59,8 @@
     - "sg_config.yml"
 
 - name: Check execution bit
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ insight_es_searchgaurd_home }}/tools/sgadmin.sh"
     owner: elasticsearch
     group: elasticsearch
