--- a/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/upgrade-searchguard.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/upgrade-searchguard.yml
@@ -1,6 +1,6 @@
 - name: Create elasticsearch config path folder
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ insight_es_conf_base }}"
     state: directory
     owner: elasticsearch
@@ -8,8 +8,8 @@
     mode: 0755
 
 - name: Copy elasticsearch cert files
-  become: yes
-  copy:
+  become: true
+  ansible.builtin.copy:
     src: "files/searchguard/{{ item }}"
     dest: "{{ insight_es_conf_base }}/{{ item }}"
     owner: elasticsearch
@@ -21,18 +21,18 @@
     - "root-ca.pem"
 
 - name: Find searchguard bundle
-  become: yes
-  find:
+  become: true
+  ansible.builtin.find:
     paths: "{{ insight_home }}/app/third-party/elasticsearch/"
     patterns: "^search-guard-.+\\.zip$"
-    use_regex: yes
+    use_regex: true
     file_type: file
   register: check_searchguard_bundle_result
 
 - name: Install searchguard plugin
-  become: yes
-  ignore_errors: yes
-  shell: |
+  become: true
+  ignore_errors: true
+  ansible.builtin.shell: |
     {{ insight_es_script_path }}/elasticsearch-plugin install \
     -b file://{{ check_searchguard_bundle_result.files[0].path }}
   environment:
@@ -42,8 +42,8 @@
   when: check_searchguard_bundle_result.matched == 1
 
 - name: Copy searchguard cert files
-  become: yes
-  copy:
+  become: true
+  ansible.builtin.copy:
     src: "files/searchguard/{{ item }}"
     dest: "{{ insight_es_searchgaurd_home }}/tools/{{ item }}"
     owner: elasticsearch
@@ -55,8 +55,8 @@
     - "root-ca.pem"
 
 - name: Copy SG roles files
-  become: yes
-  copy:
+  become: true
+  ansible.builtin.copy:
     src: "files/searchguard/{{ item }}"
     dest: "{{ insight_es_searchgaurd_home }}/sgconfig/{{ item }}"
     owner: elasticsearch
@@ -68,8 +68,8 @@
     - "sg_config.yml"
 
 - name: Check execution bit
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ insight_es_searchgaurd_home }}/tools/sgadmin.sh"
     owner: elasticsearch
     group: elasticsearch
