--- a/Ansible/examples/playbook-rt-xray.yml
+++ b/Ansible/examples/playbook-rt-xray.yml
@@ -1,12 +1,15 @@
 ---
 - hosts: postgres_servers
   collections:
+    - community.postgresql
+    - community.general
     - jfrog.platform
   roles:
     - postgres
 
 - hosts: artifactory_servers
   collections:
+    - community.general
     - jfrog.platform
   serial:
     - 1
@@ -17,6 +20,7 @@
 
 - hosts: xray_servers
   collections:
+    - community.general
     - jfrog.platform
   roles:
     - role: xray
