--- a/Ansible/ansible_collections/jfrog/platform/insight.yml
+++ b/Ansible/ansible_collections/jfrog/platform/insight.yml
@@ -1,3 +1,7 @@
-- hosts: insight_servers
+- name: Play for insight_servers
+  hosts: insight_servers
+  collections:
+    - community.general
+    - ansible.posix
   roles:
     - insight
