--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/ensure_permissions_correct.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/ensure_permissions_correct.yml
@@ -1,5 +1,5 @@
 - name: Ensure permissions are correct
-  become: yes
+  become: true
   block:
     - name: Ensure user ownership
       ansible.builtin.command: find {{ jfrog_home_directory }} ! -user {{ artifactory_user }} -print -exec chown {{ artifactory_user }} {} \;
