--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/install_service.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/install_service.yml
@@ -1,6 +1,4 @@
 ---
 - name: Create artifactory service
-  become: yes
-  command: "{{ artifactory_home }}/app/bin/installService.sh"
-  args:
-    creates: "{{ artifactory_service_file }}"
+  become: true
+  ansible.builtin.command: "{{ artifactory_home }}/app/bin/installService.sh"
