--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/selinux_configure_context.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/selinux_configure_context.yml
@@ -1,7 +1,7 @@
 ---
 - name: Configure SELinux context
-  become: yes
-  sefcontext:
+  become: true
+  community.general.sefcontext:
     target: "{{ jfrog_home_directory }}/artifactory/app/bin(/.*)?"
     setype: bin_t
     state: present
