--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/selinux_restore_context.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/selinux_restore_context.yml
@@ -1,6 +1,6 @@
 ---
 - name: Restore SELinux content
-  become: yes
+  become: true
   ansible.builtin.command: restorecon -R -v "{{ jfrog_home_directory }}/artifactory/app/bin"
   when: ansible_distribution == 'RedHat'
   changed_when: false
