--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -1,5 +1,5 @@
 - name: Include distro specific variables
-  include_vars: "{{ distro_vars_file }}"
+  ansible.builtin.include_vars: "{{ distro_vars_file }}"
   vars:
     distro_vars_file: "{{ lookup('first_found', distro_vars, errors='ignore') }}"
     distro_vars:
@@ -10,47 +10,47 @@
         - "vars/distro/default.yml"
 
 - name: Install prerequisite packages
-  include_tasks: "{{ ansible_os_family }}.yml"
+  ansible.builtin.include_tasks: "{{ ansible_os_family }}.yml"
 
 - name: Install nginx
-  include_role:
+  ansible.builtin.include_role:
     name: artifactory_nginx
   when:
     - artifactory_nginx_enabled | bool
     - not artifactory_nginx_ssl_enabled | bool
 
 - name: Install nginx with SSL
-  include_role:
+  ansible.builtin.include_role:
     name: artifactory_nginx_ssl
   when:
     - not artifactory_nginx_enabled | bool
     - artifactory_nginx_ssl_enabled | bool
 
 - name: Ensure group artifactory exist
-  become: yes
-  group:
+  become: true
+  ansible.builtin.group:
     name: "{{ artifactory_group }}"
     state: present
 
 - name: Ensure user artifactory exist
-  become: yes
-  user:
+  become: true
+  ansible.builtin.user:
     name: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
-    create_home: yes
+    create_home: true
     home: "{{ artifactory_home }}"
     shell: /bin/bash
     state: present
 
 - name: Check if artifactory tar already exists
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ jfrog_home_directory }}/{{ artifactory_tar_file_name }}"
   register: artifactory_tar_check
 
 - name: Download artifactory
-  become: yes
-  get_url:
+  become: true
+  ansible.builtin.get_url:
     url: "{{ artifactory_tar }}"
     timeout: "{{ artifactory_download_timeout }}"
     dest: "{{ jfrog_home_directory }}"
@@ -60,8 +60,8 @@
   when: not artifactory_tar_check.stat.exists
 
 - name: Extract artifactory tar
-  become: yes
-  unarchive:
+  become: true
+  ansible.builtin.unarchive:
     src: "{{ jfrog_home_directory }}/{{ artifactory_tar_file_name }}"
     dest: "{{ jfrog_home_directory }}"
     owner: "{{ artifactory_user }}"
@@ -71,28 +71,28 @@
   when: (download_artifactory is succeeded) and (not ansible_check_mode)
 
 - name: Check if app directory exists
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ artifactory_home }}/app"
   register: app_dir_check
 
 - name: Copy untar directory to artifactory home
-  become: yes
-  copy:
+  become: true
+  ansible.builtin.copy:
     src: "{{ artifactory_untar_home }}/"
     dest: "{{ artifactory_home }}"
     owner: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
     mode: 0755
-    remote_src: yes
+    remote_src: true
   when: not app_dir_check.stat.exists
 
 - name: Create required directories
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ item }}"
     state: directory
-    recurse: yes
+    recurse: true
     owner: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
   loop:
@@ -102,14 +102,14 @@
     - "{{ artifactory_home }}/var/etc/artifactory/info/"
 
 - name: Check if system.yaml exists
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ artifactory_home }}/var/etc/system.yaml"
   register: systemyaml
 
 - name: Configure system.yaml
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: "{{ artifactory_system_yaml_template }}"
     dest: "{{ artifactory_home }}/var/etc/system.yaml"
     mode: 0644
@@ -117,11 +117,11 @@
     - artifactory_systemyaml is defined
     - artifactory_systemyaml | length > 0
     - artifactory_systemyaml_override or (not systemyaml.stat.exists)
-  notify: restart artifactory
+  notify: Restart artifactory
 
 - name: Configure master key
-  become: yes
-  copy:
+  become: true
+  ansible.builtin.copy:
     dest: "{{ artifactory_home }}/var/etc/security/master.key"
     content: "{{ master_key }}"
     owner: "{{ artifactory_user }}"
@@ -129,76 +129,77 @@
     mode: 0640
 
 - name: Configure installer info
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: installer-info.json.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/info/installer-info.json"
     mode: 0644
-  notify: restart artifactory
+  notify: Restart artifactory
 
 - name: Configure binary store
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: binarystore.xml.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/binarystore.xml"
     mode: 0644
   when:
     - artifactory_binarystore is defined
     - artifactory_binarystore | length > 0
-  notify: restart artifactory
+  notify: Restart artifactory
 
 - name: Configure artifactory license(s)
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: artifactory.cluster.license.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/artifactory.cluster.license"
     mode: 0644
   when:
-   - artifactory_licenses is defined
-   - artifactory_licenses | length > 0
-  notify: restart artifactory
+    - artifactory_licenses is defined
+    - artifactory_licenses | length > 0
+  notify: Restart artifactory
 
 - name: Check if included database driver is the correct version
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/postgresql-{{ postgres_driver_version }}.jar"
   register: included_database_driver
 
 - name: Check if database driver exists
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/jf_postgresql-{{ postgres_driver_version }}.jar"
-  when: 
+  when:
     - not included_database_driver.stat.exists
   register: database_driver
 
 - name: Download database driver
-  become: yes
-  get_url:
+  become: true
+  ansible.builtin.get_url:
     url: "{{ postgres_driver_download_url }}"
     dest: "{{ artifactory_home }}/var/bootstrap/artifactory/tomcat/lib"
     owner: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
+    mode: 0644
   when:
     - postgres_driver_download_url is defined
     - not database_driver.stat.exists
     - not included_database_driver.stat.exists
-  notify: restart artifactory
+  notify: Restart artifactory
 
 - name: Restore SELinux content
-  include_tasks: shared/selinux_restore_context.yml
+  ansible.builtin.include_tasks: shared/selinux_restore_context.yml
 
 - name: Install Service
-  include_tasks: shared/install_service.yml
+  ansible.builtin.include_tasks: shared/install_service.yml
 
 - name: Ensure permissions are correct
-  include_tasks: shared/ensure_permissions_correct.yml
+  ansible.builtin.include_tasks: shared/ensure_permissions_correct.yml
 
 - name: Restart artifactory
-  meta: flush_handlers
+  ansible.builtin.meta: flush_handlers
 
 - name: Make sure artifactory is up and running
-  uri:
+  ansible.builtin.uri:
     url: http://127.0.0.1:8082/router/api/v1/system/health
     timeout: 130
     status_code: 200
