--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/handlers/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/handlers/main.yml
@@ -1,8 +1,8 @@
 ---
 # handlers file for artifactory_nginx
-- name: restart nginx
-  become: yes
-  systemd:
+- name: Restart nginx
+  become: true
+  ansible.builtin.systemd:
     name: "{{ nginx_daemon }}"
     state: restarted
-    enabled: yes
+    enabled: true
