--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/meta/main.yml
@@ -15,15 +15,13 @@ galaxy_info:
         - 8
     - name: Ubuntu
       versions:
-        - xenial
         - bionic
         - focal
     - name: Debian
       versions:
-        - stretch
         - buster
     - name: Amazon
-      version:
+      versions:
         - 2
   galaxy_tags:
     - artifactory
