--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/RedHat.yml
@@ -1,12 +1,12 @@
 - name: Import nginx signing key
-  become: yes
-  rpm_key:
+  become: true
+  ansible.builtin.rpm_key:
     key: https://nginx.org/keys/nginx_signing.key
     state: present
 
 - name: Add nginx stable repo
-  become: yes
-  copy:
+  become: true
+  ansible.builtin.copy:
     dest: /etc/yum.repos.d/nginx-stable.repo
     owner: root
     group: root
@@ -14,14 +14,14 @@
     content: |
         [nginx-stable]
         name=nginx stable repo
-        baseurl=https://nginx.org/packages/{{ (ansible_distribution == 'Amazon')|ternary('amzn2','centos') }}/$releasever/$basearch/
+        baseurl=https://nginx.org/packages/{{ (ansible_distribution == 'Amazon') | ternary('amzn2','centos') }}/$releasever/$basearch/
         gpgcheck=1
         enabled=1
         gpgkey=https://nginx.org/keys/nginx_signing.key
         module_hotfixes=true
 
 - name: Update yum cache
-  become: yes
-  yum:
+  become: true
+  ansible.builtin.yum:
     state: present
-    update_cache: yes
+    update_cache: true
