--- a/Ansible/ansible_collections/jfrog/platform/roles/distribution/vars/script/archive.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/distribution/vars/script/archive.yml
@@ -18,7 +18,7 @@ distribution_installer_scenario:
       }
     - {
         "expecting": "please specify the ip address of this machine",
-        "sending": "{% if distribution_ha_node_type is defined and distribution_ha_node_type == 'master' %}{{ ansible_host }}{% else %}{{ ansible_host }}{% endif %}"
+        "sending": "{{ ansible_host }}"
       }
     - {
         "expecting": "are you adding an additional node",
@@ -36,7 +36,7 @@ distribution_installer_scenario:
         "expecting": "(postgresql|database)?\\s?username.*",
         "sending": "{{ distribution_db_user }}"
       }
-    - { 
+    - {
         "expecting": "(confirm\\s?)?(postgresql|database)?\\s?password.*:",
         "sending": "{{ distribution_db_password }}"
       }
