--- a/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/install.yml
@@ -1,31 +1,31 @@
 - name: Install prerequisite packages
-  include_tasks: "{{ ansible_os_family }}.yml"
+  ansible.builtin.include_tasks: "{{ ansible_os_family }}.yml"
 
 - name: Ensure group insight exist
-  become: yes
-  group:
+  become: true
+  ansible.builtin.group:
     name: "{{ insight_group }}"
     state: present
 
 - name: Ensure user insight exist
-  become: yes
-  user:
+  become: true
+  ansible.builtin.user:
     name: "{{ insight_user }}"
     group: "{{ insight_group }}"
-    create_home: yes
+    create_home: true
     home: "{{ insight_home }}"
     shell: /bin/bash
     state: present
 
 - name: Check if insight tar already exists
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ jfrog_home_directory }}/{{ insight_tar_file_name }}"
   register: insight_tar_check
 
 - name: Download insight
-  become: yes
-  get_url:
+  become: true
+  ansible.builtin.get_url:
     url: "{{ insight_tar }}"
     timeout: "{{ insight_download_timeout }}"
     dest: "{{ jfrog_home_directory }}"
@@ -35,8 +35,8 @@
   when: not insight_tar_check.stat.exists
 
 - name: Extract insight tar
-  become: yes
-  unarchive:
+  become: true
+  ansible.builtin.unarchive:
     src: "{{ jfrog_home_directory }}/{{ insight_tar_file_name }}"
     dest: "{{ jfrog_home_directory }}"
     owner: "{{ insight_user }}"
@@ -46,28 +46,28 @@
   when: download_insight is succeeded
 
 - name: Check if app directory exists
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ insight_home }}/app"
   register: app_dir_check
 
 - name: Copy untar directory to insight home
-  become: yes
-  copy:
+  become: true
+  ansible.builtin.copy:
     src: "{{ insight_untar_home }}/"
     dest: "{{ insight_home }}"
     owner: "{{ insight_user }}"
     group: "{{ insight_group }}"
     mode: 0755
-    remote_src: yes
+    remote_src: true
   when: not app_dir_check.stat.exists
 
 - name: Create required directories
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ item }}"
     state: directory
-    recurse: yes
+    recurse: true
     owner: "{{ insight_user }}"
     group: "{{ insight_group }}"
   loop:
@@ -76,8 +76,8 @@
     - "{{ insight_home }}/var/etc/info/"
 
 - name: Configure master key
-  become: yes
-  copy:
+  become: true
+  ansible.builtin.copy:
     dest: "{{ insight_home }}/var/etc/security/master.key"
     content: "{{ master_key }}"
     owner: "{{ insight_user }}"
@@ -85,19 +85,19 @@
     mode: 0640
 
 - name: Setup elasticsearch
-  import_tasks: setup-elasticsearch.yml
+  ansible.builtin.import_tasks: setup-elasticsearch.yml
 
 - name: Check if install.sh wrapper script exist
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ insight_install_script_path }}/install.sh"
   register: install_wrapper_script
 
 - name: Include interactive installer scripts
-  include_vars: script/archive.yml
+  ansible.builtin.include_vars: script/archive.yml
 
 - name: Install Insight
-  include_tasks: expect.yml
+  ansible.builtin.include_tasks: expect.yml
   vars:
     exp_executable_cmd: "./install.sh -u {{ insight_user }} -g {{ insight_group }}"
     exp_dir: "{{ insight_install_script_path }}"
@@ -109,24 +109,24 @@
   when: install_wrapper_script.stat.exists
 
 - name: Configure installer info
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: installer-info.json.j2
     dest: "{{ insight_home }}/var/etc/info/installer-info.json"
     owner: "{{ insight_user }}"
     group: "{{ insight_group }}"
     mode: 0644
-  notify: restart insight
+  notify: Restart insight
 
 - name: Check if system.yaml exists
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ insight_home }}/var/etc/system.yaml"
   register: systemyaml
 
 - name: Configure system.yaml
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: "{{ insight_system_yaml_template }}"
     dest: "{{ insight_home }}/var/etc/system.yaml"
     owner: "{{ insight_user }}"
@@ -136,30 +136,30 @@
     - insight_systemyaml is defined
     - insight_systemyaml | length > 0
     - insight_systemyaml_override or (not systemyaml.stat.exists)
-  notify: restart insight
+  notify: Restart insight
 
 - name: Update correct permissions
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ insight_home }}"
     state: directory
-    recurse: yes
+    recurse: true
     owner: "{{ insight_user }}"
     group: "{{ insight_group }}"
 
 - name: Install insight as a service
-  become: yes
-  command: "{{ insight_archive_service_cmd }}"
+  become: true
+  ansible.builtin.command: "{{ insight_archive_service_cmd }}"
   args:
     chdir: "{{ insight_install_script_path }}"
     creates: "{{ insight_service_file }}"
   register: check_service_status_result
 
 - name: Restart insight
-  meta: flush_handlers
+  ansible.builtin.meta: flush_handlers
 
 - name: Make sure insight is up and running
-  uri:
+  ansible.builtin.uri:
     url: http://127.0.0.1:8082/router/api/v1/system/health
     timeout: 130
     status_code: 200
