--- a/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/upgrade-elasticsearch.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/upgrade-elasticsearch.yml
@@ -1,6 +1,6 @@
 - name: Kill elasticsearch process
-  become: yes
-  shell: |
+  become: true
+  ansible.builtin.shell: |
     set -o pipefail
     ps -ef | grep -v grep | grep -w elasticsearch | awk '{print $2}' | while read curr_ps_id
     do
@@ -13,19 +13,19 @@
   changed_when: false
 
 - name: Find searchguard bundle for removal
-  become: yes
-  find:
+  become: true
+  ansible.builtin.find:
     paths: "{{ insight_home }}/app/third-party/elasticsearch/"
     patterns: "^search-guard-.+\\.zip$"
-    use_regex: yes
+    use_regex: true
     file_type: file
   register: check_searchguard_bundle_result
 
 - name: Remove searchguard plugin
-  become: yes
+  become: true
   become_user: elasticsearch
-  ignore_errors: yes
-  shell: |
+  ignore_errors: true
+  ansible.builtin.shell: |
     {{ insight_es_script_path }}/elasticsearch-plugin remove {{ check_searchguard_bundle_result.files[0].path }}
   environment:
     ES_JAVA_HOME: "{{ insight_es_java_home }}"
@@ -34,14 +34,14 @@
   when: check_searchguard_bundle_result.matched == 1
 
 - name: Delete elasticsearch home dir
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ insight_es_home }}"
     state: absent
 
 - name: Create elasticsearch home dir
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ insight_es_home }}"
     state: directory
     owner: elasticsearch
@@ -49,25 +49,25 @@
     mode: 0755
 
 - name: Find elasticsearch package
-  become: yes
-  find:
+  become: true
+  ansible.builtin.find:
     paths: "{{ insight_home }}/app/third-party/elasticsearch"
     patterns: "^elasticsearch-.+\\.tar.gz$"
-    use_regex: yes
+    use_regex: true
     file_type: file
   register: check_elasticsearch_package_result
 
 - name: Set elasticsearch package file name
-  set_fact:
+  ansible.builtin.set_fact:
     insight_elasticsearch_package: "{{ check_elasticsearch_package_result.files[0].path }}"
   when: check_elasticsearch_package_result.matched > 0
 
 - name: Extract elasticsearch package
-  become: yes
-  unarchive:
+  become: true
+  ansible.builtin.unarchive:
     src: "{{ insight_elasticsearch_package }}"
     dest: "{{ insight_es_home }}"
-    remote_src: yes
+    remote_src: true
     extra_opts:
       - --strip-components=1
       - --exclude=config
@@ -78,8 +78,8 @@
   when: check_elasticsearch_package_result.matched > 0
 
 - name: Generate HA elasticsearch.yml template file
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: templates/ha/{{ insight_ha_node_type }}.elasticsearch.yml.j2
     dest: "{{ insight_es_conf_base }}/elasticsearch.yml"
     owner: elasticsearch
@@ -88,8 +88,8 @@
   when: unarchive_result.extract_results.rc | default(128) == 0
 
 - name: Create empty unicast_hosts.txt file
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ insight_es_conf_base }}/unicast_hosts.txt"
     state: touch
     owner: elasticsearch
@@ -97,12 +97,12 @@
     mode: 0644
 
 - name: Upgrade searchguard plugin
-  import_tasks: upgrade-searchguard.yml
+  ansible.builtin.import_tasks: upgrade-searchguard.yml
 
 - name: Start elasticsearch
-  become: yes
+  become: true
   become_user: elasticsearch
-  shell: |
+  ansible.builtin.shell: |
     nohup {{ insight_es_script_path }}/elasticsearch -d
   environment:
     ES_JAVA_HOME: "{{ insight_es_java_home }}"
@@ -111,21 +111,21 @@
   register: start_elastcsearch
 
 - name: Wait for elasticsearch to start
-  pause:
+  ansible.builtin.pause:
     seconds: 30
   when: start_elasticsearch.changed
 
 - name: Check if elasticsearch is running
-  wait_for:
+  ansible.builtin.wait_for:
     host: localhost
     port: "{{ insight_es_transport_port }}"
     delay: 5
     connect_timeout: 1
 
 - name: Init searchguard plugin
-  become: yes
+  become: true
   become_user: elasticsearch
-  shell: |
+  ansible.builtin.shell: |
     ./sgadmin.sh -p {{ insight_es_transport_port }} -cacert root-ca.pem \
     -cert sgadmin.pem -key sgadmin.key -cd {{ insight_es_searchgaurd_home }}/sgconfig/ -nhnv -icl
   args:
