--- a/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/upgrade.yml
@@ -1,12 +1,12 @@
 - name: Check if insight tar exists
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ jfrog_home_directory }}/{{ insight_tar_file_name }}"
   register: insight_tar_check
 
 - name: Download insight for upgrade
-  become: yes
-  get_url:
+  become: true
+  ansible.builtin.get_url:
     url: "{{ insight_tar }}"
     timeout: "{{ insight_download_timeout }}"
     dest: "{{ jfrog_home_directory }}"
@@ -16,8 +16,8 @@
   when: not insight_tar_check.stat.exists
 
 - name: Extract insight tar
-  become: yes
-  unarchive:
+  become: true
+  ansible.builtin.unarchive:
     src: "{{ jfrog_home_directory }}/{{ insight_tar_file_name }}"
     dest: "{{ jfrog_home_directory }}"
     remote_src: true
@@ -27,40 +27,40 @@
   when: download_insight is succeeded
 
 - name: Stop insight
-  meta: flush_handlers
+  ansible.builtin.meta: flush_handlers
 
 - name: Delete current app folder
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ insight_home }}/app"
     state: absent
   when: download_insight.changed
 
 - name: Copy new app to insight app
-  command: "cp -r {{ insight_untar_home }}/app/. {{ insight_home }}/app"
-  become: yes
+  ansible.builtin.command: "cp -r {{ insight_untar_home }}/app/. {{ insight_home }}/app"
+  become: true
   when: download_insight.changed
 
 - name: Delete untar directory
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ insight_untar_home }}"
     state: absent
   when: download_insight.changed
 
 - name: Upgrade elasticsearch
-  import_tasks: upgrade-elasticsearch.yml
+  ansible.builtin.import_tasks: upgrade-elasticsearch.yml
   when: download_insight.changed
 
 - name: Check if system.yaml exists
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ insight_home }}/var/etc/system.yaml"
   register: systemyaml
 
 - name: Configure system.yaml
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: "{{ insight_system_yaml_template }}"
     dest: "{{ insight_home }}/var/etc/system.yaml"
     owner: "{{ insight_user }}"
@@ -70,20 +70,20 @@
     - insight_systemyaml is defined
     - insight_systemyaml | length > 0
     - insight_systemyaml_override or (not systemyaml.stat.exists)
-  notify: restart insight
+  notify: Restart insight
 
 - name: Check if install.sh wrapper script exist
-  become: yes
-  stat:
+  become: true
+  ansible.builtin.stat:
     path: "{{ insight_install_script_path }}/install.sh"
   register: upgrade_wrapper_script
   when: download_insight.changed
 
 - name: Include interactive installer scripts
-  include_vars: script/archive.yml
+  ansible.builtin.include_vars: script/archive.yml
 
 - name: Upgrade Insight
-  include_tasks: expect.yml
+  ansible.builtin.include_tasks: expect.yml
   vars:
     exp_executable_cmd: "./install.sh -u {{ insight_user }} -g {{ insight_group }}"
     exp_dir: "{{ insight_install_script_path }}"
@@ -97,27 +97,27 @@
     - download_insight.changed
 
 - name: Configure installer info
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: installer-info.json.j2
     dest: "{{ insight_home }}/var/etc/info/installer-info.json"
     mode: 0644
-  notify: restart insight
+  notify: Restart insight
 
 - name: Update correct permissions
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ insight_home }}"
     state: directory
-    recurse: yes
+    recurse: true
     owner: "{{ insight_user }}"
     group: "{{ insight_group }}"
 
 - name: Restart insight
-  meta: flush_handlers
+  ansible.builtin.meta: flush_handlers
 
 - name: Make sure insight is up and running
-  uri:
+  ansible.builtin.uri:
     url: http://127.0.0.1:8082/router/api/v1/system/health
     timeout: 130
     status_code: 200
