--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/handlers/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: restart postgresql
-  become: yes
-  systemd:
+- name: Restart postgresql
+  become: true
+  ansible.builtin.systemd:
     name: "{{ postgresql_daemon }}"
     state: restarted
