--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/rabbitmq/upgrade/Debian.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/rabbitmq/upgrade/Debian.yml
@@ -1,19 +1,19 @@
 - name: Find erlang package
-  find:
+  ansible.builtin.find:
     paths: "{{ xray_home }}/app/third-party/rabbitmq/"
     patterns: "^(esl-)?erlang.+{{ ansible_distribution_release }}.+\\.deb$"
-    use_regex: yes
+    use_regex: true
     file_type: file
   register: check_erlang_package_result
 
 - name: Set erlang package file name
-  set_fact:
+  ansible.builtin.set_fact:
     xray_erlang_package: "{{ check_erlang_package_result.files[0].path }}"
   when: check_erlang_package_result.matched > 0
 
 - name: Install erlang package
-  become: yes
-  apt:
+  become: true
+  ansible.builtin.apt:
     deb: "{{ xray_erlang_package }}"
     state: present
   register: install_erlang_package_result
