--- a/Ansible/ansible_collections/jfrog/platform/xray.yml
+++ b/Ansible/ansible_collections/jfrog/platform/xray.yml
@@ -1,3 +1,6 @@
-- hosts: xray_servers
+- name: Play for xray_servers
+  hosts: xray_servers
+  collections:
+    - community.general
   roles:
     - xray
