--- a/Ansible/examples/playbook-platform.yml
+++ b/Ansible/examples/playbook-platform.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: postgres_servers
   collections:
+    - community.postgresql
+    - community.general
     - jfrog.platform
   roles:
     - role: postgres
@@ -8,6 +10,7 @@
 
 - hosts: artifactory_servers
   collections:
+    - community.general
     - jfrog.platform
   serial:
     - 1
@@ -18,6 +21,7 @@
 
 - hosts: xray_servers
   collections:
+    - community.general
     - jfrog.platform
   roles:
     - role: xray
@@ -25,6 +29,7 @@
 
 - hosts: distribution_servers
   collections:
+    - community.general
     - jfrog.platform
   roles:
     - role: distribution
@@ -32,6 +37,8 @@
 
 - hosts: insight_servers
   collections:
+    - community.general
+    - ansible.posix
     - jfrog.platform
   roles:
     - role: insight
